@@ -228,19 +228,13 @@ public class PluginJAR
 		}
 		
 		// Load extra jars that are part of this plugin
-		String jars = jEdit.getProperty("plugin." + className + ".jars");
-		if(jars != null)
+		Collection<String> jarsPaths = jar.getJars();
+		for(String _jarPath: jarsPaths)
 		{
-			String dir = MiscUtilities.getParentOfPath(path);
-			StringTokenizer st = new StringTokenizer(jars);
-			while(st.hasMoreTokens())
+			PluginJAR _jar = jEdit.getPluginJAR(_jarPath);
+			if(_jar == null)
 			{
-				String _jarPath = MiscUtilities.constructPath(dir,st.nextToken());
-				PluginJAR _jar = jEdit.getPluginJAR(_jarPath);
-				if(_jar == null)
-				{
-					jEdit.addPluginJAR(_jarPath);
-				}
+				jEdit.addPluginJAR(_jarPath);
 			}
 		}
 		jar.checkDependencies();
@@ -276,6 +270,85 @@ public class PluginJAR
 		return jar;
 	} // }}}
 	
+	//{{{ parseJarsFilesString(String path, String jarsString) method
+	/**
+	 * parse the files listed in plugin.CLASSNAME.jars or plugin.CLASSNAME.files
+	 * and return full paths to each file of the list.
+	 * @since jEdit 5.3pre1
+	 */
+	public static Collection<String> parseJarsFilesString(String path, String jarsString)
+	{
+		String dir = MiscUtilities.getParentOfPath(path);
+		StringTokenizer st = new StringTokenizer(jarsString);
+		Collection<String> jarPaths = new LinkedList<String>();
+		while(st.hasMoreTokens())
+		{
+			String _jarPath = MiscUtilities.constructPath(dir,st.nextToken());
+			jarPaths.add(_jarPath);
+		}
+		return jarPaths;
+	}
+	// }}}
+	//{{{ parseJarsFilesStringNames(String path, String jarsString) method
+	/**
+	 * parse the files listed in plugin.CLASSNAME.jars or plugin.CLASSNAME.files
+	 * and return them as a collection
+	 * @since jEdit 5.3pre1
+	 */
+	public static Collection<String> parseJarsFilesStringNames(String jarsString)
+	{
+		StringTokenizer st = new StringTokenizer(jarsString);
+		Collection<String> jarPaths = new LinkedList<String>();
+		while(st.hasMoreTokens())
+		{
+			jarPaths.add(st.nextToken());
+		}
+		return jarPaths;
+	}
+	// }}}
+
+	//{{{ getJars() method
+	/**
+	 * Get the jars listed in this plugin and return full paths to them
+	 *
+	 * @return jars full paths or empty collection if plugin is null
+	 * @since jEdit 5.3pre1
+	 */
+	public Collection<String> getJars()
+	{
+		if(plugin != null)
+		{
+			String jars = jEdit.getProperty("plugin." + plugin.getClassName() + ".jars");
+			if(jars != null)
+			{
+				return parseJarsFilesString(path, jars);
+			}
+		}
+		return Collections.emptyList();
+	}
+	// }}}
+
+	// {{{ getFiles() method
+	/**
+	 * Get the files listed in this plugin and return full paths to them
+	 *
+	 * @return files full paths or empty collection if plugin is null
+	 * @since jEdit 5.3pre1
+	 */
+	public Collection<String> getFiles()
+	{
+		if(plugin != null)
+		{
+			String files = jEdit.getProperty("plugin." + plugin.getClassName() + ".files");
+			if(files != null)
+			{
+				return parseJarsFilesString(path, files);
+			}
+		}
+		return Collections.emptyList();
+	}
+	// }}}
+
 	//{{{ getPath() method
 	/**
 	 * Returns the full path name of this plugin's JAR file.
@@ -598,29 +671,21 @@ public class PluginJAR
 
 		// each JAR file listed in the plugin's jars property
 		// needs to know that we need them
-		String jars = jEdit.getProperty("plugin."
-			+ plugin.getClassName() + ".jars");
-		if(jars != null)
-		{
-			String dir = MiscUtilities.getParentOfPath(path);
+		Collection<String> jarsPaths = getJars();
 
-			StringTokenizer st = new StringTokenizer(jars);
-			while(st.hasMoreTokens())
+		for(String jarPath: jarsPaths)
+		{
+			PluginJAR jar = jEdit.getPluginJAR(jarPath);
+			if(jar == null)
 			{
-				String jarPath = MiscUtilities.constructPath(
-					dir,st.nextToken());
-				PluginJAR jar = jEdit.getPluginJAR(jarPath);
-				if(jar == null)
-				{
-					String[] args = { jarPath };
-					jEdit.pluginError(path, "plugin-error.missing-jar",args);
-					ok = false;
-				}
-				else
-				{
-					weRequireThese.add(jarPath);
-					jar.theseRequireMe.add(path);
-				}
+				String[] args = { jarPath };
+				jEdit.pluginError(path, "plugin-error.missing-jar",args);
+				ok = false;
+			}
+			else
+			{
+				weRequireThese.add(jarPath);
+				jar.theseRequireMe.add(path);
 			}
 		}
 		
